# pepper

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  OPERATIONAL_READINESS.md  REPO_GUIDE.md
scripts/: bootstrap.ps1  clean.ps1  run-api.ps1
tests/: test_analyst.py  test_api_backtesting.py  test_api_dashboard.py  test_api_market_context.py  test_api_operator.py  test_api_optimizer_and_sizing.py  test_api_readiness.py  test_api_scheduler.py  test_api_security.py  test_api_strategy_builder.py  test_backtesting.py  test_execution_engine.py  test_feature_engineering.py  test_live_alpaca_router.py  test_live_ccxt_router.py  test_market_context.py  test_market_data.py  test_mean_reversion.py  test_optimizer.py  test_paper_profitability.py  test_paper_trading.py  test_portfolio_service.py  test_position_sizer.py  test_prediction_terminal_snapshots.py  test_reinforcement.py  test_risk_agent.py  test_router.py  test_scheduler.py  test_settings.py  test_strategy_builder.py  test_strategy_builder_bollinger.py
trading_ai/: __init__.py  logging_config.py  main.py  settings.py
trading_ai/agents/: __init__.py  analyst.py  base.py  debate.py  models.py  strategy.py  trader.py
trading_ai/alerts/: __init__.py  service.py
trading_ai/api/: app.py  security.py
trading_ai/backtesting/: __init__.py  engine.py  leakage.py  mean_reversion.py  models.py  optimizer.py  strategy.py  walk_forward.py
trading_ai/core/: __init__.py  enums.py  models.py
(+52 files in other folders)
