[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-ai"
version = "0.2.0"
description = "Production-oriented foundation for a multi-asset AI trading system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "asyncpg>=0.31.0",
  "aiosqlite>=0.22.0",
  "ccxt>=4.5.50",
  "dynaconf>=3.2.13",
  "fastapi>=0.136.0",
  "gymnasium>=1.3.0",
  "httpx>=0.28.1",
  "openai>=2.24.0",
  "pandas>=3.0.1",
  "pydantic>=2.12.5",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.3",
  "sqlalchemy>=2.0.49",
  "structlog>=25.5.0",
  "uvicorn>=0.46.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
]

[tool.setuptools.packages.find]
include = ["trading_ai*"]

[tool.setuptools.package-data]
"trading_ai.dashboard" = ["*.html", "*.css", "*.js"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
